Bug 328651 - Theme is not updated when composite changes
Summary: Theme is not updated when composite changes
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-11 10:52 UTC by Alex Fiestas
Modified: 2014-03-09 22:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
image showing composite with opaque theme. (27.10 KB, image/png)
2014-03-05 15:05 UTC, Alex Fiestas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2013-12-11 10:52:49 UTC
Theme is not updated when Compositing changes

Reproducible: Always
Comment 1 Sebastian Kügler 2014-03-04 17:27:22 UTC
Fixed with theme updates.
Comment 2 Alex Fiestas 2014-03-05 15:05:54 UTC
Created attachment 85423 [details]
image showing composite with opaque theme.
Comment 3 Sebastian Kügler 2014-03-09 22:50:55 UTC
Git commit a1dce4bb86ca0d9b6295526082ff4c23a51e4f2b by Sebastian Kügler.
Committed on 09/03/2014 at 22:50.
Pushed by sebas into branch 'master'.

Update theme on KWindowSystem::compositingChanged

M  +2    -0    src/plasma/private/theme_p.cpp

http://commits.kde.org/plasma-framework/a1dce4bb86ca0d9b6295526082ff4c23a51e4f2b