Update theme on KWindowSystem::compositingChanged

BUG:328651